add more recipes

--- a/recipes/chickenpaprika.html
+++ b/recipes/chickenpaprika.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Chicken paprika</h1>
@@ -34,5 +34,10 @@
         <li>Release pressure using the natural-release method according to manufacturer's instructions, about 10 minutes. Release remaining pressure carefully using the quick-release method.</li>
         <li>Place 1/2 cup yogurt in a small bowl. Add in 1/2 cup of sauce, a tablespoon at time, to temper the yogurt. Add paprika and blend well. Pour yogurt mixture back into the pot. Shred the chicken thighs and serve over cooked noodles. Garnish each serving with a dollop of yogurt.</li>
     </ol>
+    <h2>Other recipes</h2>
+    <ul>
+        <li><a href="https://www.allrecipes.com/recipe/11758/baked-ziti-i/"></a>Baked Ziti</li>
+        <li><a href="https://www.allrecipes.com/recipe/228240/bibimbap-korean-rice-with-mixed-vegetables/">Bibimbap</a></li>
+    </ul>
 </body>
 </html>
